--- a/IEEApps/IEEApps/VIiew/Base.lproj/Main.storyboard
+++ b/IEEApps/IEEApps/VIiew/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="prh-Jv-OlZ">
             <objects>
-                <viewController id="5uC-Tf-ySF" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainStoryboardID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="5uC-Tf-ySF" customClass="MainViewController" customModule="IEEApps" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oD1-vn-Afn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,7 +33,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lcd-k7-4C8">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="MainCollecrionView" id="lcd-k7-4C8">
                                         <rect key="frame" x="2.5" y="0.0" width="409" height="132"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zxa-3s-bAA">
@@ -96,9 +96,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="ΣΥΝΔΕΣΗ"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3BW-LS-6RK">
-                                <rect key="frame" x="232.5" y="54" width="67" height="31"/>
+                                <rect key="frame" x="280.5" y="54" width="24" height="14"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gWm-TX-C60"/>
@@ -112,7 +112,7 @@
                             <constraint firstItem="PHj-4M-DkY" firstAttribute="top" secondItem="QTK-oK-xgm" secondAttribute="bottom" constant="10" id="YzI-Ki-QBu"/>
                             <constraint firstItem="QTK-oK-xgm" firstAttribute="top" secondItem="gWm-TX-C60" secondAttribute="top" constant="10" id="bB7-l7-PhO"/>
                             <constraint firstItem="gWm-TX-C60" firstAttribute="bottom" secondItem="PHj-4M-DkY" secondAttribute="bottom" id="jnW-s9-dqf"/>
-                            <constraint firstItem="QTK-oK-xgm" firstAttribute="leading" secondItem="3BW-LS-6RK" secondAttribute="trailing" constant="10" id="kEN-Jg-IYQ"/>
+                            <constraint firstItem="QTK-oK-xgm" firstAttribute="leading" secondItem="3BW-LS-6RK" secondAttribute="trailing" constant="5" id="kEN-Jg-IYQ"/>
                             <constraint firstItem="gWm-TX-C60" firstAttribute="trailing" secondItem="PHj-4M-DkY" secondAttribute="trailing" id="z5D-Va-iLF"/>
                         </constraints>
                     </view>
