--- a/IEEApps/IEEApps/VIiew/Base.lproj/Main.storyboard
+++ b/IEEApps/IEEApps/VIiew/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="PHj-4M-DkY">
-                                <rect key="frame" x="0.0" y="95" width="414" height="767"/>
+                                <rect key="frame" x="0.0" y="146" width="414" height="716"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1WK-4K-hN6">
                                     <size key="itemSize" width="409" height="132"/>
@@ -40,32 +40,32 @@
                                             <rect key="frame" x="0.0" y="0.0" width="409" height="132"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Y4-4W-GEP">
-                                                    <rect key="frame" x="10" y="10" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Teacher" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Y4-4W-GEP">
+                                                    <rect key="frame" x="10" y="10" width="61" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jm5-EW-ur0">
-                                                    <rect key="frame" x="357" y="10" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DateTime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jm5-EW-ur0">
+                                                    <rect key="frame" x="327" y="10" width="72" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zj0-Jr-ixl">
-                                                    <rect key="frame" x="10" y="36" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zj0-Jr-ixl">
+                                                    <rect key="frame" x="10" y="36" width="33" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fio-ew-ylV">
-                                                    <rect key="frame" x="10" y="67" width="389" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fio-ew-ylV">
+                                                    <rect key="frame" x="10" y="67" width="389" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jt5-DR-tTA">
-                                                    <rect key="frame" x="10" y="96" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jt5-DR-tTA">
+                                                    <rect key="frame" x="10" y="95.5" width="43" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -95,27 +95,30 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="ΣΥΝΔΕΣΗ"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3BW-LS-6RK">
-                                <rect key="frame" x="280.5" y="54" width="24" height="14"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain"/>
-                            </button>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="MwP-4M-gr8">
+                                <rect key="frame" x="5" y="90" width="414" height="51"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gWm-TX-C60"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="MwP-4M-gr8" firstAttribute="top" secondItem="QTK-oK-xgm" secondAttribute="bottom" constant="5" id="14X-Jn-DI7"/>
                             <constraint firstItem="kgI-NY-Iyc" firstAttribute="top" secondItem="gWm-TX-C60" secondAttribute="top" constant="10" id="4Eb-Hc-DRP"/>
                             <constraint firstItem="kgI-NY-Iyc" firstAttribute="leading" secondItem="gWm-TX-C60" secondAttribute="leading" constant="15" id="4xr-yW-VBH"/>
-                            <constraint firstItem="3BW-LS-6RK" firstAttribute="top" secondItem="gWm-TX-C60" secondAttribute="top" constant="10" id="Ake-fj-f2N"/>
                             <constraint firstItem="PHj-4M-DkY" firstAttribute="leading" secondItem="gWm-TX-C60" secondAttribute="leading" id="BN1-z6-eor"/>
+                            <constraint firstItem="MwP-4M-gr8" firstAttribute="trailing" secondItem="gWm-TX-C60" secondAttribute="trailing" constant="5" id="Rhi-qv-w1W"/>
                             <constraint firstAttribute="trailing" secondItem="QTK-oK-xgm" secondAttribute="trailing" constant="15" id="Y0i-Qs-o0C"/>
-                            <constraint firstItem="PHj-4M-DkY" firstAttribute="top" secondItem="QTK-oK-xgm" secondAttribute="bottom" constant="10" id="YzI-Ki-QBu"/>
                             <constraint firstItem="QTK-oK-xgm" firstAttribute="top" secondItem="gWm-TX-C60" secondAttribute="top" constant="10" id="bB7-l7-PhO"/>
                             <constraint firstItem="gWm-TX-C60" firstAttribute="bottom" secondItem="PHj-4M-DkY" secondAttribute="bottom" id="jnW-s9-dqf"/>
-                            <constraint firstItem="QTK-oK-xgm" firstAttribute="leading" secondItem="3BW-LS-6RK" secondAttribute="trailing" constant="5" id="kEN-Jg-IYQ"/>
+                            <constraint firstItem="PHj-4M-DkY" firstAttribute="top" secondItem="MwP-4M-gr8" secondAttribute="bottom" constant="5" id="sfl-FH-fx4"/>
+                            <constraint firstItem="MwP-4M-gr8" firstAttribute="leading" secondItem="gWm-TX-C60" secondAttribute="leading" constant="5" id="xbF-nd-xoC"/>
                             <constraint firstItem="gWm-TX-C60" firstAttribute="trailing" secondItem="PHj-4M-DkY" secondAttribute="trailing" id="z5D-Va-iLF"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="LogInBtn" destination="QTK-oK-xgm" id="zsY-wA-tyv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LUt-yM-vzA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
